# bgm-for-es

./: .codeclimate.yml  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Documentation.txt  MANIFEST.in  Makefile  README.md  bgm.d  mypy.ini  pyproject.toml  setup.py  startbgm  stdeb.cfg
.github/workflows/: python-publish.yml  python.yaml  tox.yaml
DEBIAN/: conffiles  postinst  postrm
bgm/: Application.py  MusicPlayer.py  MusicStateMachine.py  ProcessService.py  State.py  __init__.py  __version__.py  config_default.yaml  config_processor.py  environment.py  environment_flagbased.py  music_player.py  music_state_machine.py  process_service.py
bgm/test/: test_bgm.py
cfg/: bgmconfig.ini
requirements/: dev.txt
scripts/: install-esbgm.py  runcommand-onend.sh  runcommand-onstart.sh
service/: bgm.service
src/: MusicPlayer.py  ProcessService.py  bgm.py  config.ini
test/: bgmtests.py  test_bgm.py
tests/: test_bgm.py
tests/data/: config_test.yaml
